--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aghajari/jssoup": "^1.0.2",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jssoup": "^0.0.15",
     "mongoose": "^6.7.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/swagger-ui-express": "^4.1.3",
     "onchange": "^7.1.0",
     "prettier": "^2.7.1",
