--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "jssoup": "^0.0.15",
     "mongoose": "^6.7.0",
     "node-cache": "^5.1.2",
@@ -26,6 +27,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/swagger-ui-express": "^4.1.3",
     "onchange": "^7.1.0",
     "prettier": "^2.7.1",
